--- a/kicad/.gitignore
+++ b/kicad/.gitignore
@@ -15,6 +15,7 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+*auto_saved_files*
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -29,3 +30,5 @@ fp-info-cache
 
 .DS_Store
 *-backups/
+*.zip
+starman/
