--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,5 @@ idf_component_register(SRCS
                     "main.c"
                     "music.c"
                     "lights.c"
+                    "patterns.c"
                     INCLUDE_DIRS ".")
