Adding in status LED support (WS2812) for future OTA and DLC updates

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,6 @@ idf_component_register(SRCS
                     "music.c"
                     "lights.c"
                     "patterns.c"
+                    "status.c"
+                    "util.c"
                     INCLUDE_DIRS ".")
