Adding in Play button support using GPIO interrupt

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,8 @@
 idf_component_register(SRCS
                     "main.c"
-                    "music.c"
+                    "buttons.c"
                     "lights.c"
+                    "music.c"
                     "patterns.c"
                     "status.c"
                     "util.c"
