Implement "functional" game logic
Still need to test and validate it works, and to find a way to interrupt
the music playback if the user gets a 1up, star, or dies.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(SRCS
                     "lights.c"
                     "music.c"
                     "patterns.c"
+                    "random.c"
                     "status.c"
                     "util.c"
                     INCLUDE_DIRS ".")
