Renamed Lights to Display; renamed framebuffer_t struct to display_t struct
The new display_t struct will house the various overlays, like
background and text

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,9 +2,9 @@ idf_component_register(SRCS
                     "main.c"
                     "buttons.c"
                     "config.c"
+                    "display.c"
                     "gol.c"
                     "led1642gw.c"
-                    "lights.c"
                     "music.c"
                     "network.c"
                     "ota.c"
