Starting framework for showing text on the display

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,7 @@ idf_component_register(SRCS
                     "status.c"
                     "storage.c"
                     "sparkle.c"
+                    "text.c"
                     "util.c"
                     "wifi.c"
                     INCLUDE_DIRS ".")
