Create RGB library for conveying system status and an accent light

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,9 +10,9 @@ idf_component_register(SRCS
                     "ota.c"
                     "patterns.c"
                     "random.c"
-                    "status.c"
-                    "storage.c"
+                    "rgb.c"
                     "sparkle.c"
+                    "storage.c"
                     "text.c"
                     "util.c"
                     "wifi.c"
