Add an "HTTP GET /play" endpoint to play the game.
Starting framework to interact with the star via the web site

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(SRCS
                     "config.c"
                     "display.c"
                     "gol.c"
+                    "httpd.c"
                     "led1642gw.c"
                     "music.c"
                     "network.c"
