Use a photoresistor on GPIO4 to perform ambient light detection via ADC
This will be used to set the display LED brightness, so the display is
not blinding at nighttime.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRCS
                     "main.c"
+                    "adc.c"
                     "buttons.c"
                     "config.c"
                     "display.c"
