Move game logic from main.c to game.c
Will make exporting the game stats (levels, lives, etc) to httpd.c easier

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(SRCS
                     "buttons.c"
                     "config.c"
                     "display.c"
+                    "game.c"
                     "gol.c"
                     "httpd.c"
                     "led1642gw.c"
