Renamed starman.{html,css} to index.html, style.css

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -18,7 +18,7 @@ idf_component_register(SRCS
                     "text.c"
                     "util.c"
                     EMBED_FILES
-                    "assets/starman.html"
-                    "assets/starman.css"
+                    "assets/index.html"
+                    "assets/style.css"
                     "assets/starman.js"
                     INCLUDE_DIRS ".")
