Add on LOZ as special hidden theme

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,6 +16,7 @@ idf_component_register(SRCS
                     "random.c"
                     "sparkle.c"
                     "storage.c"
+                    "themes.c"
                     "text.c"
                     "util.c"
                     EMBED_FILES
