Create /test REST API call to test play specific stages (music+patterns)

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -16,8 +16,9 @@ idf_component_register(SRCS
                     "random.c"
                     "sparkle.c"
                     "storage.c"
-                    "themes.c"
+                    "test.c"
                     "text.c"
+                    "themes.c"
                     "util.c"
                     EMBED_FILES
                     "assets/about.html"
