Game play logic for the tetris theme
Still need to do user-coltrol layer, and row-clear & game-over logic

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -17,6 +17,7 @@ idf_component_register(SRCS
                     "sparkle.c"
                     "storage.c"
                     "test.c"
+                    "tetris.c"
                     "text.c"
                     "themes.c"
                     "util.c"
