Leverage GPIOs 15 and 16 for a dancing LED external module

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(SRCS
                     "config.c"
                     "display.c"
                     "draw.c"
+                    "ext.c"
                     "game.c"
                     "gol.c"
                     "httpd.c"
