Updated environment to build under esp-idf 5.5.1 stable
Updated button.c to use new gptimer API

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ firmware/.vscode/settings.json
 firmware/.vscode/c_cpp_properties.json
 .DS_Store
 firmware/build/
+firmware/managed_components/
 firmware/sdkconfig
 firmware/sdkconfig.old
 bom.html
